fixed column gap

--- a/css/galery.css
+++ b/css/galery.css
@@ -73,8 +73,7 @@ body {
     justify-content: center;    
     justify-items: center;    
     grid-template-columns: 14% 14% 14% 14%;   
-    row-gap: 15px;
-    column-gap: 20px;
+    row-gap: 15px;    
     margin-top: 15px; 
   
 }
